--- a/lesson 5/external.html
+++ b/lesson 5/external.html
@@ -27,6 +27,12 @@
 	<h2>Заголовок статьи</h2>
 </div>
 
+<div class="backgroundimage" id="background1">
+</div>
+
+<div class="backgroundimage" id="background2">
+</div>
+
 
 </body>
 </html>
